# rock_paper_scissors_cli

./: Cargo.toml  LICENSE
.github/workflows/: release.yaml  rust-core.yaml
src/: main.rs
