[package]
name = "rock_paper_scissors_cli"
version = "0.1.0"
edition = "2021"
authors = ["Xanthus58 <FILLME>"]
license = "MIT"
repository = "https://github.com/MFGAVIN/rock_paper_scissors_cli"
readme = "README.md"
description = "An application that sends a message via a discord webhook to a user defined channel."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1