[package]
name = "rock_paper_scissors_cli"
version = "0.1.0"
edition = "2021"
authors = ["MFGAVIN <mfgavin@proton.me>"]
license = "MIT"
repository = "https://github.com/MFGAVIN/rock_paper_scissors_cli"
readme = "README.md"
description = "A game of rock, paper, and scissors using the command line."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
